--- a/styles.css
+++ b/styles.css
@@ -1,171 +1,214 @@
 body {
-    background-color: rgb(208, 178, 236);
+  background-color: rgb(208, 178, 236);
 }
-HTML CSSResult Skip Results Iframe
-EDIT ON
-body {
-    background: #fbfbfd;
-    margin: 20px;
+HTML CSSResult Skip Results Iframe EDIT ON body {
+  background: #fbfbfd;
+  margin: 20px;
 }
 .main-container {
-    background-image: linear-gradient(rgb(247, 228, 241), rgb(190, 105, 227));
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  background-image: linear-gradient(rgb(247, 228, 241), rgb(190, 105, 227));
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.second-main-container {
+  background-image: url("https://mail.google.com/mail/u/0?ui=2&ik=afa3b823fb&attid=0.1&permmsgid=msg-a:r2113574728181790782&th=1936e2580eca0ec7&view=att&disp=safe&realattid=f_m400lt400&zw");
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 h1 {
-    color: violet;
-    font-family: cursive;
-    font-size: 80px;
-    text-align: center;
+  color: violet;
+  font-family: cursive;
+  font-size: 80px;
+  text-align: center;
 }
+
 h2 {
-    color: violet;
-    font-family: monospace;
-    font-size: 30px;
-    text-align: center;
+  color: violet;
+  font-family: monospace;
+  font-size: 30px;
+  text-align: center;
 }
 
+a:hover {
+  background-color: rgb(194, 47, 140);
+}
 
+ul {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+}
+li {
+  padding: 30px 30px 30px 30px;
+  margin: 30px;
+  font-weight: bold;
+  font-size: 2em;
+  color: white;
+}
+
+p {
+  margin-right: 2em;
+  margin-left: 30px;
+  text-wrap: wrap;
+  padding: 5px;
+  color: white;
+  text-align: justify;
+}
+.end-note {
+  text-align: right;
+  color: rgb(76, 22, 59);
+  font-size: 1.5em;
+}
 .new_footer_area {
-    background: #fbfbfd;
+  background: #fbfbfd;
 }
-
 
 .new_footer_top {
-    padding: 8px 0px 150px;
-    position: relative;
-      overflow-x: hidden;
+  padding: 8px 0px 150px;
+  position: relative;
+  overflow-x: hidden;
 }
 .new_footer_area .footer_bottom {
-    padding-top: 5px;
-    padding-bottom: 50px;
+  padding-top: 5px;
+  padding-bottom: 50px;
 }
 .footer_bottom {
-    font-size: 14px;
-    font-weight: 300;
-    line-height: 20px;
-    color: #7f88a6;
-    padding: 27px 0px;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 20px;
+  color: #7f88a6;
+  padding: 27px 0px;
 }
 .new_footer_top .company_widget p {
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 28px;
-    color: #6a7695;
-    margin-bottom: 20px;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 28px;
+  color: #6a7695;
+  margin-bottom: 20px;
 }
 .new_footer_top .company_widget .f_subscribe_two .btn_get {
-    border-width: 1px;
-    margin-top: 20px;
+  border-width: 1px;
+  margin-top: 20px;
 }
 .btn_get_two:hover {
-    background: transparent;
-    color: #5e2ced;
+  background: transparent;
+  color: #5e2ced;
 }
 .btn_get:hover {
-    color: #fff;
-    background: #6754e2;
-    border-color: #6754e2;
-    -webkit-box-shadow: none;
-    box-shadow: none;
+  color: #fff;
+  background: #6754e2;
+  border-color: #6754e2;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
-a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
-    text-decoration: none;
-    outline: none;
+a:hover,
+a:focus,
+.btn:hover,
+.btn:focus,
+button:hover,
+button:focus {
+  text-decoration: none;
+  outline: none;
 }
-
-
 
 .new_footer_top .f_widget.about-widget .f_list li a:hover {
-    color: #5e2ced;
+  color: #5e2ced;
 }
 .new_footer_top .f_widget.about-widget .f_list li {
-    margin-bottom: 11px;
+  margin-bottom: 11px;
 }
 
 .new_footer_top .f_social_icon a {
-    width: 44px;
-    height: 44px;
-    line-height: 43px;
-    background: transparent;
-    border: 1px solid #e2e2eb;
-    font-size: 24px;
+  width: 44px;
+  height: 44px;
+  line-height: 43px;
+  background: transparent;
+  border: 1px solid #e2e2eb;
+  font-size: 24px;
 }
 
 .btn_get_two {
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    background: #5e2ced;
-    border-color: #5e2ced;
-    color: #fff;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  background: #5e2ced;
+  border-color: #5e2ced;
+  color: #fff;
 }
 
 .btn_get_two:hover {
-    background: transparent;
-    color: #5e2ced;
+  background: transparent;
+  color: #5e2ced;
 }
 
 .new_footer_top .f_social_icon a:hover {
-    background: #5e2ced;
-    border-color: #5e2ced;
-  color:white;
+  background: #5e2ced;
+  border-color: #5e2ced;
+  color: white;
 }
 .new_footer_top .f_social_icon a + a {
-    margin-left: 4px;
+  margin-left: 4px;
 }
 .new_footer_top .f-title {
-    margin-bottom: 30px;
-    color: #263b5e;
+  margin-bottom: 30px;
+  color: #263b5e;
 }
 .f_600 {
-    font-weight: 600;
+  font-weight: 600;
 }
 .f_size_18 {
-    font-size: 18px;
+  font-size: 18px;
 }
-h1, h2, h3, h4, h5, h6 {
-    color: #4b505e;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #4b505e;
 }
 .new_footer_top .f_widget.about-widget .f_list li a {
-    color: #6a7695;
+  color: #6a7695;
 }
 
-
 .new_footer_top .footer_bg {
-    position: absolute;
-    bottom: 0;
-    background: url("https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEigB8iI5tb8WSVBuVUGc9UjjB8O0708X7Fdic_4O1LT4CmLHoiwhanLXiRhe82yw0R7LgACQ2IhZaTY0hhmGi0gYp_Ynb49CVzfmXtYHUVKgXXpWvJ_oYT8cB4vzsnJLe3iCwuzj-w6PeYq_JaHmy_CoGoa6nw0FBo-2xLdOPvsLTh_fmYH2xhkaZ-OGQ/s16000/footer_bg.png") no-repeat scroll center 0;
-    width: 100%;
-    height: 266px;
+  position: absolute;
+  bottom: 0;
+  background: url("https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEigB8iI5tb8WSVBuVUGc9UjjB8O0708X7Fdic_4O1LT4CmLHoiwhanLXiRhe82yw0R7LgACQ2IhZaTY0hhmGi0gYp_Ynb49CVzfmXtYHUVKgXXpWvJ_oYT8cB4vzsnJLe3iCwuzj-w6PeYq_JaHmy_CoGoa6nw0FBo-2xLdOPvsLTh_fmYH2xhkaZ-OGQ/s16000/footer_bg.png")
+    no-repeat scroll center 0;
+  width: 100%;
+  height: 266px;
 }
 
 .new_footer_top .footer_bg .footer_bg_one {
-    background: url("https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEia0PYPxwT5ifToyP3SNZeQWfJEWrUENYA5IXM6sN5vLwAKvaJS1pQVu8mOFFUa_ET4JuHNTFAxKURFerJYHDUWXLXl1vDofYXuij45JZelYOjEFoCOn7E6Vxu0fwV7ACPzArcno1rYuVxGB7JY6G7__e4_KZW4lTYIaHSLVaVLzklZBLZnQw047oq5-Q/s16000/volks.gif") no-repeat center center;
-    width: 330px;
-    height: 105px;
-  background-size:100%;
-    position: absolute;
-    bottom: 0;
-    left: 30%;
-    -webkit-animation: myfirst 22s linear infinite;
-    animation: myfirst 22s linear infinite;
+  background: url("https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEia0PYPxwT5ifToyP3SNZeQWfJEWrUENYA5IXM6sN5vLwAKvaJS1pQVu8mOFFUa_ET4JuHNTFAxKURFerJYHDUWXLXl1vDofYXuij45JZelYOjEFoCOn7E6Vxu0fwV7ACPzArcno1rYuVxGB7JY6G7__e4_KZW4lTYIaHSLVaVLzklZBLZnQw047oq5-Q/s16000/volks.gif")
+    no-repeat center center;
+  width: 330px;
+  height: 105px;
+  background-size: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 30%;
+  -webkit-animation: myfirst 22s linear infinite;
+  animation: myfirst 22s linear infinite;
 }
 
 .new_footer_top .footer_bg .footer_bg_two {
-    background: url("https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhyLGwEUVwPK6Vi8xXMymsc-ZXVwLWyXhogZxbcXQYSY55REw_0D4VTQnsVzCrL7nsyjd0P7RVOI5NKJbQ75koZIalD8mqbMquP20fL3DxsWngKkOLOzoOf9sMuxlbyfkIBTsDw5WFUj-YJiI50yzgVjF8cZPHhEjkOP_PRTQXDHEq8AyWpBiJdN9SfQA/s16000/cyclist.gif") no-repeat center center;
-    width: 88px;
-    height: 100px;
-  background-size:100%;
-    bottom: 0;
-    left: 38%;
-    position: absolute;
-    -webkit-animation: myfirst 30s linear infinite;
-    animation: myfirst 30s linear infinite;
+  background: url("https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhyLGwEUVwPK6Vi8xXMymsc-ZXVwLWyXhogZxbcXQYSY55REw_0D4VTQnsVzCrL7nsyjd0P7RVOI5NKJbQ75koZIalD8mqbMquP20fL3DxsWngKkOLOzoOf9sMuxlbyfkIBTsDw5WFUj-YJiI50yzgVjF8cZPHhEjkOP_PRTQXDHEq8AyWpBiJdN9SfQA/s16000/cyclist.gif")
+    no-repeat center center;
+  width: 88px;
+  height: 100px;
+  background-size: 100%;
+  bottom: 0;
+  left: 38%;
+  position: absolute;
+  -webkit-animation: myfirst 30s linear infinite;
+  animation: myfirst 30s linear infinite;
 }
-
-
 
 @-moz-keyframes myfirst {
   0% {
@@ -194,6 +237,6 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 .copyright {
-    text-align: center;
-    color: #6a7695;
+  text-align: center;
+  color: #6a7695;
 }
